modifying webpage content

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </div>
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="https://www.linkedin.com/in/omar-khaled-373ab1172/" class="home-hero__social-icon-link">
+          <a href="https://www.linkedin.com/in/omar-khaled39/" class="home-hero__social-icon-link">
             <img
               src="./assets/png/linkedin-ico.png"
               alt="icon"
@@ -145,7 +145,7 @@
                 and I'm a <strong> Game Developer </strong> located in
                 Cairo,Egypt. I've done
                 <strong> remote </strong>
-                projects for startups to create <strong>2D and 3D Games </strong>
+                projects for startups to create <strong>VR, AR, 2D and 3D Games </strong>
                 for both business and consumer use.
                 Also I've been preparing <strong>Programming Courses</strong> for children ages between
                 <strong>9-16 years old</strong> in diffrenet computer science aspects as 
@@ -196,13 +196,20 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Custom Fortune Wheel</h3>
               <p class="projects__row-content-desc">
-                A Unity devtool for creating and customizing a Fortune Wheel in any game.
+                A Unity devtool for creating and customizing a Fortune Wheel in any game.<br>
+                I worked solo in this project. <br>
+                The tool features:
+                <ul class="projects__row-content-desc">
+                  <li><strong>-</strong>10+ Ready-to-use assets.</li>
+                  <li><strong>-</strong>Full documentation for the project.</li>
+                  <li><strong>-</strong>Examples to try out.</li>
+                </ul>
               </p>
               <a
-                href="https://assetstore.unity.com/publishers/56725"
+                href="https://drive.google.com/file/d/1UTLOgaqmQ-A9knhSHa3Qx1ec9LjPQ2Cd/view?usp=sharing"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Assets Store</a
+                >Watch</a
               >
             </div>
           </div>
@@ -218,8 +225,15 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Scratch-like Game</h3>
               <p class="projects__row-content-desc">
-                A game, similar to Scrach (coding website) for children to learn logical thinking
-                by solving simple puzzles with code blocks.
+                A game similar to Scrach (coding website) for children to learn logical thinking
+                by solving simple puzzles with code blocks.<br>
+                I worked solo in this project.
+                This projects also features:
+                <ul class="projects__row-content-desc">
+                  <li><strong>-</strong>A level editor application to create multiple levels.</li>
+                  <li><strong>-</strong>3+ diffrenet maps to experience.</li>
+                  <li><strong>-</strong>The game features URP.</li>
+                </ul>
               </p>
               <a
                 href="https://drive.google.com/file/d/1Q1cS_sinOWkXRgyxOgkzSeDAzeN7KmQB/view?usp=drive_link"
@@ -232,26 +246,33 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/interview-game.jpeg"
+                src="./assets/jpeg/giza-interview-game.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Interview Game</h3>
+              <h3 class="projects__row-content-title">Giza System Interview Game</h3>
               <p class="projects__row-content-desc">
-                A 2D game made to gamify the interview process by pop-up questions in gameplay.
+                A game made to gamify the interview process for <strong>Giza Systems</strong>.<br>
+                I worked as a solo developer in this game. In this game I used:
+                <ul class="projects__row-content-desc">
+                  <li><strong>-</strong> A ready game template and modified it.</li>
+                  <li><strong>-</strong> Modified levels in scenes.</li>
+                  <li><strong>-</strong> Modified some game assets.</li>
+                  <li><strong>-</strong> Developed a backend system to recieve questions and send answers to API.</li>
+                </ul>
               </p>
               <a
-                href="https://play.unity.com/mg/other/interview-game"
+                href="https://drive.google.com/file/d/1LIFF6mJGKdqYV8d7DCUK_yM2GXKuJ7fw/view?usp=sharing"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Play Now</a
+                >Watch</a
               >
             </div>
           </div>
-          <div class="projects__row">
+          <!-- <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
                 src="./assets/jpeg/road-cross-vr.jpeg"
@@ -272,7 +293,7 @@
                 >Watch</a
               >
             </div>
-          </div>
+          </div> -->
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
@@ -285,7 +306,12 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Market Simulator</h3>
               <p class="projects__row-content-desc">
-                A market game that simulates the buying process.
+                A market game that simulates the buying process.<br> This simulator was requested by one of my clients.<br>
+                The simulator features:
+                <ul class="projects__row-content-desc">
+                  <li><strong>-</strong>50+ shopping item across the market.</li>
+                  <li><strong>-</strong>The simulator works on WebGL flawlessly.</li>
+                </ul>
               </p>
               <a
                 href="https://drive.google.com/file/d/1MkmglNW8FyBEHefuZdYPpFT5hxu32SFY/view?usp=drive_link"
@@ -307,11 +333,13 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">AR Fighting Game</h3>
               <p class="projects__row-content-desc">
-                A 1V1 Fighting Game but with <strong>AR Experience</strong>. 
+                A 1V1 Fighting Game but with <strong>AR Experience</strong>.
                 The game is Multiplayer using <strong>Photon API</strong>.
+                The game was made for a crash course in which I participated in its preparation.<br>
+                I worked in a team where I was responsible for the fighting mechanics.
               </p>
               <a
-                href="https://drive.google.com/file/d/1MDw8plmSJA76KiDxOaCgjqzabUzDuJQy/view?usp=drive_link"
+                href="https://drive.google.com/file/d/1DHgLXVUxD0KrP5bru1pYzR837wZbDTCk/view?usp=sharing"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Watch</a
@@ -321,24 +349,31 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/pseudo-nidhogg.jpeg"
+                src="./assets/jpeg/room-builder-vr.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Pseudo Nidhogg</h3>
+              <h3 class="projects__row-content-title">Room Builder VR</h3>
               <p class="projects__row-content-desc">
-                A replica game for the original Nidhogg game. 
-                All art are made by me.
+                A VR application that simulates an empty room in which a set of 20+ furniture
+                can be added and modified in place and rotation.
+                This project was made for my VR Diploma associated with 412 Labs for equipment. <br>
+                Technologies used:
+                <ul class="projects__row-content-desc">
+                  <li><strong>-</strong>Unity Game Engine</li>
+                  <li><strong>-SteamVR</strong> API</li>
+                  <li><strong>-</strong>High resoultion models and lightning for better simulation</li>
+                </ul>
               </p>
-              <a
+              <!-- <a
                 href="https://drive.google.com/file/d/1jzuKt_Hyg-DOHGLaJiJmsEBohUVMUa47/view?usp=drive_link"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Watch</a
-              >
+              > -->
             </div>
           </div>
         </div>
@@ -352,7 +387,7 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/omar-khaled-373ab1172/">
+              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/omar-khaled39/">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
@@ -389,13 +424,13 @@
         </div>
 
         <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
-        <div class="main-footer__lower">
+        <!-- <div class="main-footer__lower">
           &copy; Copyright 2021. Made by
           <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
             >Ram Maheshwari</a
           >
         </div>
-      </div>
+      </div> -->
     </footer>
 
     <script src="./index.js"></script>
