re-ordering the projects

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
               <div class="skills__skill">SteamVR</div>
               <div class="skills__skill">VuforiaAR</div>
               <div class="skills__skill">ARCore</div>
+              <div class="skills__skill">Unity AR Foundation</div>
               <div class="skills__skill">Construct 3</div>
               <div class="skills__skill">Python</div>
               <div class="skills__skill">SQL</div>
@@ -179,7 +180,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            These are my lastest Games and Data Analysis insights.
+            These are my lastest Games.
           </span>
         </h2>
 
@@ -206,11 +207,66 @@
                 </ul>
               </p>
               <a
-                href="https://drive.google.com/file/d/1UTLOgaqmQ-A9knhSHa3Qx1ec9LjPQ2Cd/view?usp=sharing"
+              href="https://drive.google.com/file/d/1UTLOgaqmQ-A9knhSHa3Qx1ec9LjPQ2Cd/view?usp=sharing"
+              class="btn btn--med btn--theme dynamicBgClr"
+              target="_blank"
+              >Watch</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/jpeg/ar-fight.jpeg"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">AR Fighting Game</h3>
+              <p class="projects__row-content-desc">
+                A 1V1 Fighting Game but with <strong>AR Experience</strong>.
+                The game is Multiplayer using <strong>Photon API</strong>.
+                The game was made for a crash course in which I participated in its preparation.<br>
+                I worked in a team where I was responsible for the fighting mechanics.
+              </p>
+              <a
+                href="https://drive.google.com/file/d/1DHgLXVUxD0KrP5bru1pYzR837wZbDTCk/view?usp=sharing"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Watch</a
               >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/jpeg/room-builder-vr.jpeg"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Room Builder VR</h3>
+              <p class="projects__row-content-desc">
+                A VR application that simulates an empty room in which a set of 20+ furniture
+                can be added and modified in place and rotation.
+                This project was made for my VR Diploma associated with 412 Labs for equipment. <br>
+                Technologies used:
+                <ul class="projects__row-content-desc">
+                  <li><strong>-</strong>Unity Game Engine</li>
+                  <li><strong>-SteamVR</strong> API</li>
+                  <li><strong>-</strong>High resoultion models and lightning for better simulation</li>
+                </ul>
+              </p>
+              <!-- <a
+                href="https://drive.google.com/file/d/1jzuKt_Hyg-DOHGLaJiJmsEBohUVMUa47/view?usp=drive_link"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Watch</a
+              > -->
             </div>
           </div>
           <div class="projects__row">
@@ -319,61 +375,6 @@
                 target="_blank"
                 >Watch</a
               >
-            </div>
-          </div>
-          <div class="projects__row">
-            <div class="projects__row-img-cont">
-              <img
-                src="./assets/jpeg/ar-fight.jpeg"
-                alt="Software Screenshot"
-                class="projects__row-img"
-                loading="lazy"
-              />
-            </div>
-            <div class="projects__row-content">
-              <h3 class="projects__row-content-title">AR Fighting Game</h3>
-              <p class="projects__row-content-desc">
-                A 1V1 Fighting Game but with <strong>AR Experience</strong>.
-                The game is Multiplayer using <strong>Photon API</strong>.
-                The game was made for a crash course in which I participated in its preparation.<br>
-                I worked in a team where I was responsible for the fighting mechanics.
-              </p>
-              <a
-                href="https://drive.google.com/file/d/1DHgLXVUxD0KrP5bru1pYzR837wZbDTCk/view?usp=sharing"
-                class="btn btn--med btn--theme dynamicBgClr"
-                target="_blank"
-                >Watch</a
-              >
-            </div>
-          </div>
-          <div class="projects__row">
-            <div class="projects__row-img-cont">
-              <img
-                src="./assets/jpeg/room-builder-vr.jpeg"
-                alt="Software Screenshot"
-                class="projects__row-img"
-                loading="lazy"
-              />
-            </div>
-            <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Room Builder VR</h3>
-              <p class="projects__row-content-desc">
-                A VR application that simulates an empty room in which a set of 20+ furniture
-                can be added and modified in place and rotation.
-                This project was made for my VR Diploma associated with 412 Labs for equipment. <br>
-                Technologies used:
-                <ul class="projects__row-content-desc">
-                  <li><strong>-</strong>Unity Game Engine</li>
-                  <li><strong>-SteamVR</strong> API</li>
-                  <li><strong>-</strong>High resoultion models and lightning for better simulation</li>
-                </ul>
-              </p>
-              <!-- <a
-                href="https://drive.google.com/file/d/1jzuKt_Hyg-DOHGLaJiJmsEBohUVMUa47/view?usp=drive_link"
-                class="btn btn--med btn--theme dynamicBgClr"
-                target="_blank"
-                >Watch</a
-              > -->
             </div>
           </div>
         </div>
