adding another VR game

--- a/index.html
+++ b/index.html
@@ -272,12 +272,36 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/scratch-like.jpeg"
+                src="./assets/jpeg/road-cross-vr.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Road Cross VR</h3>
+              <p class="projects__row-content-desc">
+                A road cross game but with <strong>VR Experience</strong>.
+                Be careful when you cross the road or you will be hit by a car! It is scary believe me.<br>
+                The game uses wireless controller to move.
+              </p>
+              <a
+                href="https://drive.google.com/file/d/14ZX1kUnX1xWHtSNkWmVTS2giIvMfNPUM/view?usp=drive_link"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Watch</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/jpeg/scratch-like.jpeg"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+                />
+              </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Scratch-like Game</h3>
               <p class="projects__row-content-desc">
@@ -328,28 +352,6 @@
               >
             </div>
           </div>
-          <!-- <div class="projects__row">
-            <div class="projects__row-img-cont">
-              <img
-                src="./assets/jpeg/road-cross-vr.jpeg"
-                alt="Software Screenshot"
-                class="projects__row-img"
-                loading="lazy"
-              />
-            </div>
-            <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Road Cross VR</h3>
-              <p class="projects__row-content-desc">
-                A road cross game but with <strong>VR Experience</strong>.
-              </p>
-              <a
-                href="https://drive.google.com/file/d/14ZX1kUnX1xWHtSNkWmVTS2giIvMfNPUM/view?usp=drive_link"
-                class="btn btn--med btn--theme dynamicBgClr"
-                target="_blank"
-                >Watch</a
-              >
-            </div>
-          </div> -->
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
